# cuda-edge-detection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  start.sh
data/: cuda_edge_detection.vbd-namnt55-d.namnt.log.INFO.20250403-095740.158078
src/: edge_detection.h  main.cpp  utils.cpp  utils.h
